--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./static/layout.css" />
-    <link rel="stylesheet" href="./static/helper.css" />
-    <link rel="stylesheet" href="./static/index.css" />
+    <link rel="stylesheet" href="./statics/layout.css" />
+    <link rel="stylesheet" href="./statics/helper.css" />
+    <link rel="stylesheet" href="./statics/index.css" />
   </head>
 
   <body>
