--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     class="main-navbar_brand_logo"
                     alt="Venturastic"
                     title="Venturastic"
-                    src="./static/images/logo-2.png"
+                    src="./statics/images/logo-2.png"
                   />
                 </a>
               </div>
@@ -204,7 +204,7 @@
                 class="main-welcome_phot sht-wh-100pct"
                 alt="Welcome to the Best Business Support Company"
                 title="Welcome to the Best Business Support Company"
-                src="./static/images/welcome.png"
+                src="./statics/images/welcome.png"
               />
             </div>
           </div>
@@ -542,7 +542,7 @@
                       class="footer-navbar_brand_logo"
                       alt="Venturastic"
                       title="Venturastic"
-                      src="./static/images/logo-2.png"
+                      src="./statics/images/logo-2.png"
                     />
                   </a>
                 </div>
