--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <section
         class="main-welcome sht-v-pdg-tp sht-v-pdg-btm sht-v-pdg-rt sht-v-pdg-lt"
       >
-        <div class="sth-ctnr">
+        <div class="sht-ctnr">
           <div class="sht-rw">
             <div
               class="sht-clm sht-v-gx"
@@ -331,7 +331,7 @@
       <section
         class="main-who-we-are sht-v-pdg-tp sht-v-pdg-btm sht-v-pdg-rt sht-v-pdg-lt"
       >
-        <div class="sth-ctnr">
+        <div class="sht-ctnr">
           <div class="sht-rw">
             <div
               class="sht-clm sht-v-gx"
@@ -462,7 +462,7 @@
       <section
         class="main-our-staff bg-main sht-v-pdg-tp sht-v-pdg-btm sht-v-pdg-rt sht-v-pdg-lt"
       >
-        <div class="sth-ctnr">
+        <div class="sht-ctnr">
           <div class="sht-rw">
             <div
               class="sht-clm"
