--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
       </section>
       <section class="main-philosophy">
-        <div class="sht-ctrr">
+        <div class="sht-ctnr">
           <div class="sht-rw">
             <div
               class="sht-clm bg-main"
