--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
       >
         <div class="footer-main-area">
           <nav class="footer-main-area_navbar">
-            <div class="sht-ctnr sth-ctnr">
+            <div class="sht-ctnr">
               <div class="sht-rw">
                 <div
                   class="sht-clm"
@@ -647,7 +647,7 @@
       </footer>
       <section class="main-copyright bg-3rd">
         <div
-          class="sht-ctnr sth-ctnr sht-v-pdg-tp sht-v-pdg-btm sht-v-pdg-rt sht-v-pdg-ltr"
+          class="sht-ctnr sht-v-pdg-tp sht-v-pdg-btm sht-v-pdg-rt sht-v-pdg-ltr"
           style="
             --sht-v-pdg-tp: 20;
             --sht-v-pdg-btm: 20;
