--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </section>
       <section
-        class="main-welcome sht-v-pdg-tp sht-v-pdg-btm sht-v-pdg-rt sht-v-pdg-lt"
+        class="main-welcome sht-v-pdg-tp sht-v-pdg-btm"
       >
         <div class="sht-ctnr">
           <div class="sht-rw">
